@@ -1,7 +1,7 @@
 Package: RcppGSL
 Type: Package
 Title: Rcpp integration for GNU GSL vectors and matrices
-Version: 0.1.1.2
+Version: 0.1.1.3
 Date: $Date$
 Author: Romain Francois and Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel and Romain Francois <RomainAndDirk@r-enthusiasts.com>
@@ -22,7 +22,7 @@ Description: Rcpp integration for GNU GSL vectors and matrices
   eases the interfaces between R and C++.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: Rcpp (>= 0.8.9)
+Depends: Rcpp (>= 0.9.8)
 Suggests: RUnit, inline
 LinkingTo: Rcpp
 SystemRequirements: GNU GSL
