@@ -104,13 +104,13 @@ namespace RcppGSL{
 _RCPPGSL_SPEC_NOSUFFIX(double                   , double                  )
 _RCPPGSL_SPEC(float                    , _float                , float                   )
 _RCPPGSL_SPEC(int                      , _int                  , int                     )
-_RCPPGSL_SPEC(long                     , _long                 , long                    )
+//_RCPPGSL_SPEC(long                     , _long                 , long                    )
 _RCPPGSL_SPEC(long double              , _long_double          , long double             )
 _RCPPGSL_SPEC(short                    , _short                , short                   )
 _RCPPGSL_SPEC(unsigned char            , _uchar                , unsigned char           )
 _RCPPGSL_SPEC(unsigned int             , _uint                 , unsigned int            )
 _RCPPGSL_SPEC(unsigned short           , _ushort               , unsigned short          )
-_RCPPGSL_SPEC(unsigned long            , _ulong                , unsigned long           )
+//_RCPPGSL_SPEC(unsigned long            , _ulong                , unsigned long           )
 _RCPPGSL_SPEC(char                     , _char                 , unsigned char           )
 _RCPPGSL_SPEC(gsl_complex              , _complex              , gsl_complex             )
 _RCPPGSL_SPEC(gsl_complex_float        , _complex_float        , gsl_complex_float       )
