@@ -149,12 +149,12 @@ _RCPPGSL_DEF(int                      , _int   )
 _RCPPGSL_DEF(unsigned char            , _uchar )
 
 _RCPPGSL_DEF_CAST(float                    , _float                , float                   )
-_RCPPGSL_DEF_CAST(long                     , _long                 , long                    )
+//_RCPPGSL_DEF_CAST(long                     , _long                 , long                    )
 _RCPPGSL_DEF_CAST(long double              , _long_double          , long double             )
 _RCPPGSL_DEF_CAST(short                    , _short                , short                   )
 _RCPPGSL_DEF_CAST(unsigned int             , _uint                 , unsigned int            )
 _RCPPGSL_DEF_CAST(unsigned short           , _ushort               , unsigned short          )
-_RCPPGSL_DEF_CAST(unsigned long            , _ulong                , unsigned long           )
+//_RCPPGSL_DEF_CAST(unsigned long            , _ulong                , unsigned long           )
 _RCPPGSL_DEF_CAST(gsl_complex              , _complex              , gsl_complex             )
 _RCPPGSL_DEF_CAST(gsl_complex_float        , _complex_float        , gsl_complex_float       )
 _RCPPGSL_DEF_CAST(gsl_complex_long_double  , _complex_long_double  , gsl_complex_long_double )
